# BrainActivitySwift

./: AnimatedSessionView.swift  AnimationView.swift  BrainCBManager.h  BrainCBManager.m  CMakeLists.txt  CreateSessionCommand.swift  GetSessionsQuery.swift  PlotStatCell.swift  Podfile  SDKWrapper.h  SDKWrapper.mm  SessionCellContainer.swift  SessionHeadCell.swift  SessionHeaderView.swift  SessionsContainerView.swift  StopSessionCommand.swift  algorithm.cpp  algorithm.h  brainbit_reader.cpp  brainbit_source.cpp  brainbit_source.h  channel.cpp  channel.h  colibri_reader.cpp  colibri_source.cpp  colibri_source.h  data_source.cpp  data_source.h  eeg_state_calculator.cpp  neuro_sys.cpp  neuro_sys.h  screen_buffer.cpp  screen_buffer.h  signal_buffer.cpp  signal_buffer.h  signal_reader.cpp  signal_reader.h  source_factory.h
BrainActivitySwift/: ActivityCell.swift  ActivityEntity.swift  ActivityVC.swift  AnimatedSessionView.xib  AppDelegate.swift  BaseContentVC.swift  BaseStatisticsVC.swift  BatteryBarVC.swift  BinaryFileHelper.swift  BrainActivitySwift-Bridging-Header.h  CategoryController.swift  Colors.swift  CommandBase.swift  Context.swift  CurrentSessionVC.swift  CustomSegmentControl.swift  EZConstraint.swift  Entity.swift  FirstVC.swift  GetSessionsQueryResponse.swift  IncResult.swift  IndicatorsVC.swift  Info.plist  MainVC.swift  MetricsVC.swift  MoodVC.swift  NewSessionContentVC.swift  Notifications.swift  PlotStatCell.swift  PlotsVC.swift  ProfileVC.swift  RawVC.swift  RealmBase.swift  RequestBase.swift  SecondVC.swift  SessionEntity.swift  SessionFile.swift  SessionFileEntity.swift  SessionHeadCell.swift  SessionsVC.swift  (+13 more)
BrainActivitySwift.xcodeproj/: project.pbxproj
BrainActivitySwift.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
BrainActivitySwift.xcworkspace/: contents.xcworkspacedata
BrainActivitySwift.xcworkspace/xcshareddata/: BrainActivitySwift.xcscmblueprint
BrainActivitySwift.xcworkspace/xcuserdata/MrGrey.xcuserdatad/: UserInterfaceState.xcuserstate
BrainActivitySwift/Assets.xcassets/Add2.imageset/: Contents.json
BrainActivitySwift/Assets.xcassets/AppIcon.appiconset/: Contents.json
BrainActivitySwift/Assets.xcassets/Play icon.imageset/: Contents.json
BrainActivitySwift/Assets.xcassets/battery-bg.imageset/: Contents.json
BrainActivitySwift/Assets.xcassets/battery-green.imageset/: Contents.json
BrainActivitySwift/Assets.xcassets/battery-orange.imageset/: Contents.json
BrainActivitySwift/Assets.xcassets/battery-red.imageset/: Contents.json
BrainActivitySwift/Assets.xcassets/battery-yellow.imageset/: Contents.json
BrainActivitySwift/Base.lproj/: Main.storyboard
BrainActivitySwiftTests/: BrainActivitySwiftTests.swift  CQRSTests.swift  SpectrumVCPerfomanceTest.swift  WrapperTests.swift
(+56 files in other folders)
